--- a/index.html
+++ b/index.html
@@ -15,22 +15,26 @@
 <body>
 
   <section class="hero">
-     <div class="container">
-       <div class="hero__top-bar">
-         <img class="hero__logo" src="" alt="логотип">
-         <div class="hero__contacts">
-           <p class="hero__phone"></p>
-           <p class="hero__call-me"></p>
-         </div>
-       </div>
-       <h1 class="hero__title">
-
-       </h1>
-       <p class="hero__text">
-
-       </p>
-       <button class="hero__button" type="button"></button>
-     </div>
+    <div class="container hero__container">
+      <div class="hero__wrapper">
+        <div class="hero__top-bar">
+          <img class="hero__logo" src="img/logo/Logo.png" alt="логотип">
+          <div class="hero__contacts contacts">
+            <p class="hero__phone phone">+7 (962) 556 - 1234</p>
+            <p class="hero__call-me call-me">Перезвоните мне</p>
+          </div>
+        </div>
+        <h1 class="hero__title">
+          Заголовок c уникальным торговым предложение по системе 4U
+        </h1>
+        <p class="hero__text">
+          Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+          несколько
+          абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.
+        </p>
+        <button class="hero__button" type="button"></button>
+      </div>
+    </div>
   </section>
   <section class="main">
     <h2 class="main__subtitle"></h2>
@@ -83,6 +87,23 @@
     <label for="callback-email" class="callback__label"></label>
     <input type="email" id="callback-email" class="callback__input">
   </section>
-
+  <section class="footer">
+    <div class="container">
+      <div class="footer__block">
+        <div class="footer__block-logo">
+          <img src="" alt="" class="footer__img">
+          <div class="footer__block-text">
+            <p class="footer__text-small"></p>
+            <p class="footer__text-small"></p>
+          </div>
+        </div>
+      </div>
+      <p class="footer__text-made-in"></p>
+      <div class="footer__contacts contacts">
+        <p class="footer__phone phone"></p>
+        <p class="footer__call-me call-me"></p>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
