--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           несколько
           абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.
         </p>
-        <button class="hero__button" type="button"></button>
+        <button class="hero__button" type="button">Подробнее</button>
       </div>
     </div>
   </section>
