--- a/index.html
+++ b/index.html
@@ -36,57 +36,65 @@
       </div>
     </div>
   </section>
-  <section class="main">
-    <h2 class="main__subtitle"></h2>
-    <p class="main__about-us"></p>
-    <p class="main__text"></p>
-    <div class="main__reasons">
-      <ul class="main_list">
-        <li class="main__item">
-          <figure class="main__figure">
-            <img src="" alt="" class="main__img">
-            <figcaption class="main__caption">
 
-            </figcaption>
-          </figure>
-        </li>
-        <li class="main__item">
-          <figure class="main__figure">
-            <img src="" alt="" class="main__img">
-            <figcaption class="main__caption">
+  <section class="advantages">
+    <div class="container advantages__container">
 
-            </figcaption>
-          </figure>
-        </li>
-        <li class="main__item">
-          <figure class="main__figure">
-            <img src="" alt="" class="main__img">
-            <figcaption class="main__caption">
+      <h2 class="advantages__subtitle">Уникальный заголовок для преимущества компании</h2>
+      <p class="advantages__about-us">О нас</p>
+      <p class="advantages__text"></p>
+      <div class="advantages__reasons">
+        <ul class="advantages_list">
+          <li class="advantages__item">
+            <figure class="advantages__figure">
+              <img src="" alt="" class="advantages__img">
+              <figcaption class="advantages__caption">
 
-            </figcaption>
-          </figure>
-        </li>
-        <li class="main__item">
-          <figure class="main__figure">
-            <img src="" alt="" class="main__img">
-            <figcaption class="main__caption">
+              </figcaption>
+            </figure>
+          </li>
+          <li class="advantages__item">
+            <figure class="advantages__figure">
+              <img src="" alt="" class="advantages__img">
+              <figcaption class="advantages__caption">
 
-            </figcaption>
-          </figure>
-        </li>
-      </ul>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="advantages__item">
+            <figure class="advantages__figure">
+              <img src="" alt="" class="advantages__img">
+              <figcaption class="advantages__caption">
+
+              </figcaption>
+            </figure>
+          </li>
+          <li class="advantages__item">
+            <figure class="advantages__figure">
+              <img src="" alt="" class="advantages__img">
+              <figcaption class="advantages__caption">
+
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </div>
     </div>
   </section>
+
   <section class="callback">
-    <h2 class="main__subtitle"></h2>
-    <p class="callback__text"></p>
-    <label for="callback-name" class="callback__label"></label>
-    <input type="text" id="callback-name" class="callback__input">
-    <label for="callback-phone" class="callback__label"></label>
-    <input type="tel" id="callback-phone" class="callback__input">
-    <label for="callback-email" class="callback__label"></label>
-    <input type="email" id="callback-email" class="callback__input">
+    <div class="container callback__container">
+      <h2 class="callback__text__subtitle">Уникальный заголовок для преимущества компании</h2>
+      <p class="callback__text"></p>
+      <label for="callback-name" class="callback__label"></label>
+      <input type="text" id="callback-name" class="callback__input">
+      <label for="callback-phone" class="callback__label"></label>
+      <input type="tel" id="callback-phone" class="callback__input">
+      <label for="callback-email" class="callback__label"></label>
+      <input type="email" id="callback-email" class="callback__input">
+    </div>
   </section>
+
   <section class="footer">
     <div class="container">
       <div class="footer__block">
