--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 
       <h2 class="advantages__subtitle">Уникальный заголовок для преимущества компании</h2>
       <p class="advantages__about-us">О нас</p>
-      <p class="advantages__text"></p>
+      <p class="advantages__text">
+        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
+        осмысленного текста рыбы на русском языке, а начинающему оратору отточить.
+      </p>
       <div class="advantages__reasons">
         <ul class="advantages_list">
           <li class="advantages__item">
