--- a/index.html
+++ b/index.html
@@ -46,42 +46,41 @@
         Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
         осмысленного текста рыбы на русском языке, а начинающему оратору отточить.
       </p>
-      <div class="advantages__reasons">
-        <ul class="advantages_list">
-          <li class="advantages__item">
-            <figure class="advantages__figure">
-              <img src="" alt="" class="advantages__img">
-              <figcaption class="advantages__caption">
 
-              </figcaption>
-            </figure>
-          </li>
-          <li class="advantages__item">
-            <figure class="advantages__figure">
-              <img src="" alt="" class="advantages__img">
-              <figcaption class="advantages__caption">
-
-              </figcaption>
-            </figure>
-          </li>
-          <li class="advantages__item">
-            <figure class="advantages__figure">
-              <img src="" alt="" class="advantages__img">
-              <figcaption class="advantages__caption">
-
-              </figcaption>
-            </figure>
-          </li>
-          <li class="advantages__item">
-            <figure class="advantages__figure">
-              <img src="" alt="" class="advantages__img">
-              <figcaption class="advantages__caption">
-
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
-      </div>
+      <ul class="advantages_list">
+        <li class="advantages__item">
+          <div class="advantages_block-text">
+            1
+          </div>
+          <p class="advantages__under-text">
+            Первое целевое преимущество
+          </p>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages_block-text">
+              2
+          </div>
+          <p class="advantages__under-text">
+            Второе целевое преимущество
+          </p>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages_block-text">
+              3
+          </div>
+          <p class="advantages__under-text">
+            Третье целевое преимущество
+          </p>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages_block-text">
+              4
+          </div>
+          <p class="advantages__under-text">
+            Четвертое целевое преимущество
+          </p>
+        </li>
+      </ul>
     </div>
   </section>
 
