--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
         <div class="footer__block-bar">
           <div class="footer__block-logo">
             <a href="#"><img class="hero__logo" src="img/logo/Logo.png" alt="логотип"></a>
-            <div class="footer__block-text">
-              <p class="footer__text-small"></p>
-              <p class="footer__text-small"></p>
-            </div>
+            <p class="footer__small-text">© 2022 XXXcompany. Все права защищены.</p>
+<!--            <div class="footer__block-text">-->
+<!--              <p class="footer__text-small"></p>-->
+<!--            </div>-->
           </div>
-          <p class="footer__text-made-in">Сделано в Ивановым Иваном</p>
+          <p class="footer__small-text">Сделано в Ивановым Иваном</p>
           <div class="footer__contacts contacts">
             <p class="footer__phone phone">+7 (962) 556 - 1234</p>
             <p class="footer__call-me call-me-back"><a href="#">Перезвоните мне</a></p>
