--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
       <ul class="advantages_list">
         <li class="advantages__item">
           <div class="advantages_block-text">
-            1
           </div>
           <p class="advantages__under-text">
             Первое целевое преимущество
@@ -58,7 +57,6 @@
         </li>
         <li class="advantages__item">
           <div class="advantages_block-text">
-            2
           </div>
           <p class="advantages__under-text">
             Второе целевое преимущество
@@ -66,7 +64,6 @@
         </li>
         <li class="advantages__item">
           <div class="advantages_block-text">
-            3
           </div>
           <p class="advantages__under-text">
             Третье целевое преимущество
@@ -74,7 +71,34 @@
         </li>
         <li class="advantages__item">
           <div class="advantages_block-text">
-            4
+          </div>
+          <p class="advantages__under-text">
+            Четвертое целевое преимущество
+          </p>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages_block-text">
+          </div>
+          <p class="advantages__under-text">
+            Четвертое целевое преимущество
+          </p>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages_block-text">
+          </div>
+          <p class="advantages__under-text">
+            Четвертое целевое преимущество
+          </p>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages_block-text">
+          </div>
+          <p class="advantages__under-text">
+            Четвертое целевое преимущество
+          </p>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages_block-text">
           </div>
           <p class="advantages__under-text">
             Четвертое целевое преимущество
