--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
           <a href="#"><img class="hero__logo" src="img/logo/Logo.png" alt="логотип"></a>
           <div class="hero__contacts contacts">
             <p class="hero__phone phone">+7 (962) 556 - 1234</p>
-            <p class="hero__call-me call-me-back"><a href="#">Перезвоните мне</a></p>
+            <a href="#" type="" class="phone-small"></a>
+            <p class="call-me-back"><a href="#">Перезвоните мне</a></p>
           </div>
         </div>
         <h1 class="hero__title">
@@ -41,7 +42,7 @@
     <div class="container advantages__container">
 
       <h2 class="advantages__subtitle subtitle">Уникальный заголовок для преимущества компании</h2>
-      <p class="advantages__about-us">О нас</p>
+      <p class="advantages__about-us undertitle-text">О нас</p>
       <p class="advantages__text">
         Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
         осмысленного текста рыбы на русском языке, а начинающему оратору отточить.
@@ -83,8 +84,8 @@
   <section class="callback">
     <div class="container callback__container">
       <div class="callback__wrapper">
-        <h2 class="callback__text__subtitle subtitle">Остались вопросы?</h2>
-        <p class="callback__text">Оставьте номер телефона, и мы перезвоним вам</p>
+        <h2 class="callback__subtitle subtitle">Остались вопросы?</h2>
+        <p class="callback__text undertitle-text">Оставьте номер телефона, и мы перезвоним вам</p>
 
         <form class="callback__form" action="https://jsonplaceholder.typicode.com/posts" name="callback__form"
               method="post">
@@ -118,9 +119,6 @@
           <div class="footer__block-logo">
             <a href="#"><img class="hero__logo" src="img/logo/Logo.png" alt="логотип"></a>
             <p class="footer__small-text">© 2022 XXXcompany. Все права защищены.</p>
-<!--            <div class="footer__block-text">-->
-<!--              <p class="footer__text-small"></p>-->
-<!--            </div>-->
           </div>
           <p class="footer__small-text">Сделано в Ивановым Иваном</p>
           <div class="footer__contacts contacts">
