--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="#"><img class="hero__logo" src="img/logo/Logo.png" alt="логотип"></a>
           <div class="hero__contacts contacts">
             <p class="hero__phone phone">+7 (962) 556 - 1234</p>
-            <a href="#" type="" class="phone-small"></a>
+            <a href="#" class="phone-small"></a>
             <p class="call-me-back"><a href="#">Перезвоните мне</a></p>
           </div>
         </div>
@@ -118,11 +118,19 @@
         <div class="footer__block-bar">
           <div class="footer__block-logo">
             <a href="#"><img class="hero__logo" src="img/logo/Logo.png" alt="логотип"></a>
-            <p class="footer__small-text">© 2022 XXXcompany. Все права защищены.</p>
+            <p class="footer__copyrights footer__small-text">© 2022 XXXcompany. Все права защищены.</p>
           </div>
-          <p class="footer__small-text">Сделано в Ивановым Иваном</p>
+
+          <!--          <div class="hero__contacts contacts">-->
+          <!--            <p class="hero__phone phone">+7 (962) 556 - 1234</p>-->
+          <!--            <a href="#" class="phone-small"></a>-->
+          <!--            <p class="call-me-back"><a href="#">Перезвоните мне</a></p>-->
+          <!--          </div>-->
+
+          <p class="footer__made-by footer__small-text">Сделано в Ивановым Иваном</p>
           <div class="footer__contacts contacts">
             <p class="footer__phone phone">+7 (962) 556 - 1234</p>
+            <a href="#" class="phone-small"></a>
             <p class="footer__call-me call-me-back"><a href="#">Перезвоните мне</a></p>
           </div>
         </div>
