--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container hero__container">
       <div class="hero__wrapper">
         <div class="hero__block-bar">
-          <a href="#"><img class="hero__logo" src="img/logo/Logo.png" alt="логотип"></a>
+          <a href="#"><img class="logo" src="img/logo/Logo.png" alt="логотип"></a>
           <div class="hero__contacts contacts">
             <p class="hero__phone phone">+7 (962) 556 - 1234</p>
             <a href="#" class="phone-small"></a>
@@ -117,7 +117,7 @@
       <div class="footer__wrapper">
         <div class="footer__block-bar">
           <div class="footer__block-logo">
-            <a href="#"><img class="hero__logo" src="img/logo/Logo.png" alt="логотип"></a>
+            <a href="#"><img class="logo" src="img/logo/Logo.png" alt="логотип"></a>
             <p class="footer__copyrights footer__small-text">© 2022 XXXcompany. Все права защищены.</p>
           </div>
 
