--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <section class="hero">
     <div class="container hero__container">
-      <div class="hero__wrapper">
+      <div class="hero__wrapper wrapper">
         <div class="hero__block-bar">
           <a href="#"><img class="logo" src="img/logo/Logo.png" alt="логотип"></a>
           <div class="hero__contacts contacts">
@@ -41,49 +41,50 @@
   <section class="advantages">
     <div class="container advantages__container">
 
-      <h2 class="advantages__subtitle subtitle">Уникальный заголовок для преимущества компании</h2>
-      <p class="advantages__about-us undertitle-text">О нас</p>
-      <p class="advantages__text">
-        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
-        осмысленного текста рыбы на русском языке, а начинающему оратору отточить.
-      </p>
+      <div class="wrapper"><h2 class="advantages__subtitle subtitle">Уникальный заголовок для преимущества компании</h2>
+        <p class="advantages__about-us undertitle-text">О нас</p>
+        <p class="advantages__text">
+          Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
+          осмысленного текста рыбы на русском языке, а начинающему оратору отточить.
+        </p>
 
-      <ul class="advantages_list">
-        <li class="advantages__item">
-          <div class="advantages_block-text">
-          </div>
-          <p class="advantages__under-text">
-            Первое целевое преимущество
-          </p>
-        </li>
-        <li class="advantages__item">
-          <div class="advantages_block-text">
-          </div>
-          <p class="advantages__under-text">
-            Второе целевое преимущество
-          </p>
-        </li>
-        <li class="advantages__item">
-          <div class="advantages_block-text">
-          </div>
-          <p class="advantages__under-text">
-            Третье целевое преимущество
-          </p>
-        </li>
-        <li class="advantages__item">
-          <div class="advantages_block-text">
-          </div>
-          <p class="advantages__under-text">
-            Четвертое целевое преимущество
-          </p>
-        </li>
-      </ul>
+        <ul class="advantages_list">
+          <li class="advantages__item">
+            <div class="advantages_block-text">
+            </div>
+            <p class="advantages__under-text">
+              Первое целевое преимущество
+            </p>
+          </li>
+          <li class="advantages__item">
+            <div class="advantages_block-text">
+            </div>
+            <p class="advantages__under-text">
+              Второе целевое преимущество
+            </p>
+          </li>
+          <li class="advantages__item">
+            <div class="advantages_block-text">
+            </div>
+            <p class="advantages__under-text">
+              Третье целевое преимущество
+            </p>
+          </li>
+          <li class="advantages__item">
+            <div class="advantages_block-text">
+            </div>
+            <p class="advantages__under-text">
+              Четвертое целевое преимущество
+            </p>
+          </li>
+        </ul>
+      </div>
     </div>
   </section>
 
   <section class="callback">
     <div class="container callback__container">
-      <div class="callback__wrapper">
+      <div class="callback__wrapper wrapper">
         <h2 class="callback__subtitle subtitle">Остались вопросы?</h2>
         <p class="callback__text undertitle-text">Оставьте номер телефона, и мы перезвоним вам</p>
 
@@ -114,7 +115,7 @@
 
   <section class="footer">
     <div class="container footer__container">
-      <div class="footer__wrapper">
+      <div class="footer__wrapper wrapper">
         <div class="footer__block-bar">
           <div class="footer__block-logo">
             <a href="#"><img class="logo" src="img/logo/Logo.png" alt="логотип"></a>
