--- a/index.html
+++ b/index.html
@@ -16,128 +16,161 @@
 
   <section class="hero">
     <div class="container hero__container">
-      <div class="hero__wrapper wrapper">
-        <div class="hero__block-bar">
-          <a href="#"><img class="logo" src="img/logo/Logo.png" alt="логотип"></a>
-          <div class="hero__contacts contacts">
-            <p class="hero__phone phone">+7 (962) 556 - 1234</p>
-            <a href="#" class="phone-small"></a>
-            <p class="call-me-back"><a href="#">Перезвоните мне</a></p>
-          </div>
+      <div class="hero__block-bar">
+        <a href="#"><img class="logo" src="img/logo/Logo.png" alt="логотип"></a>
+        <div class="hero__contacts contacts">
+          <p class="hero__phone phone">+7 (962) 556 - 1234</p>
+          <a href="#" class="phone-small"></a>
+          <p class="call-me-back"><a href="#">Перезвоните мне</a></p>
         </div>
-        <h1 class="hero__title">
-          Заголовок c уникальным торговым предложение по системе 4U
-        </h1>
-        <p class="hero__text">
-          Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
-          несколько
-          абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.
-        </p>
-        <button class="hero__button blue-button" type="button">Подробнее</button>
       </div>
+      <h1 class="hero__title">
+        Заголовок c уникальным торговым предложение по системе 4U
+      </h1>
+      <p class="hero__text">
+        Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+        несколько
+        абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.
+      </p>
+      <button class="hero__button blue-button" type="button">Подробнее</button>
     </div>
   </section>
 
   <section class="advantages">
     <div class="container advantages__container">
+      <h2 class="advantages__subtitle subtitle">Уникальный заголовок для преимущества компании</h2>
+      <p class="advantages__about-us undertitle-text">О нас</p>
+      <p class="advantages__text">
+        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
+        осмысленного текста рыбы на русском языке, а начинающему оратору отточить.
+      </p>
+      <div class="advantages__slider">
+        <input type="radio" name="respond" id="desktop" checked>
+        <article id="slider">
+          <input type="radio" name="slider" id="switch1" checked>
+          <input type="radio" name="slider" id="switch2">
+          <input type="radio" name="slider" id="switch3">
+          <input type="radio" name="slider" id="switch4">
 
-      <div class="wrapper"><h2 class="advantages__subtitle subtitle">Уникальный заголовок для преимущества компании</h2>
-        <p class="advantages__about-us undertitle-text">О нас</p>
-        <p class="advantages__text">
-          Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
-          осмысленного текста рыбы на русском языке, а начинающему оратору отточить.
-        </p>
+          <div class="slides">
+            <div id="overflow">
+              <div class="card">
+                <article>
+                  <div class="advantages_block-text">
+                  </div>
+                  <p class="advantages__under-text">
+                    Первое целевое преимущество
+                  </p>
+                </article>
+                <article>
+                  <div class="advantages_block-text">
+                  </div>
+                  <p class="advantages__under-text">
+                    Первое целевое преимущество
+                  </p>
+                </article>
+                <article>
+                  <div class="advantages_block-text">
+                  </div>
+                  <p class="advantages__under-text">
+                    Первое целевое преимущество
+                  </p>
+                </article>
+                <article>
+                  <div class="advantages_block-text">
+                  </div>
+                  <p class="advantages__under-text">
+                    Первое целевое преимущество
+                  </p>
+                </article>
+              </div>
+            </div>
+          </div>
+          <div id="controls">
 
-        <ul class="advantages_list">
-          <li class="advantages__item">
-            <div class="advantages_block-text">
-            </div>
-            <p class="advantages__under-text">
-              Первое целевое преимущество
-            </p>
-          </li>
-          <li class="advantages__item">
-            <div class="advantages_block-text">
-            </div>
-            <p class="advantages__under-text">
-              Второе целевое преимущество
-            </p>
-          </li>
-          <li class="advantages__item">
-            <div class="advantages_block-text">
-            </div>
-            <p class="advantages__under-text">
-              Третье целевое преимущество
-            </p>
-          </li>
-          <li class="advantages__item">
-            <div class="advantages_block-text">
-            </div>
-            <p class="advantages__under-text">
-              Четвертое целевое преимущество
-            </p>
-          </li>
-        </ul>
+          </div>
+        </article>
       </div>
+
+      <ul class="advantages__list">
+        <li class="advantages__item">
+          <div class="advantages_block-text">
+          </div>
+          <p class="advantages__under-text">
+            Первое целевое преимущество
+          </p>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages_block-text">
+          </div>
+          <p class="advantages__under-text">
+            Второе целевое преимущество
+          </p>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages_block-text">
+          </div>
+          <p class="advantages__under-text">
+            Третье целевое преимущество
+          </p>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages_block-text">
+          </div>
+          <p class="advantages__under-text">
+            Четвертое целевое преимущество
+          </p>
+        </li>
+      </ul>
     </div>
   </section>
 
   <section class="callback">
     <div class="container callback__container">
-      <div class="callback__wrapper wrapper">
-        <h2 class="callback__subtitle subtitle">Остались вопросы?</h2>
-        <p class="callback__text undertitle-text">Оставьте номер телефона, и мы перезвоним вам</p>
+      <h2 class="callback__subtitle subtitle">Остались вопросы?</h2>
+      <p class="callback__text undertitle-text">Оставьте номер телефона, и мы перезвоним вам</p>
 
-        <form class="callback__form" action="https://jsonplaceholder.typicode.com/posts" name="callback__form"
-              method="post">
-          <div class="callback-form-block">
-            <label for="callback-name" class="callback__label">
-              <input type="text" id="callback-name" class="callback__input" name="caller-name" placeholder="Ваше имя"
-                     required>
-            </label>
-            <label for="callback-phone" class="callback__label">
-              <input type="tel" id="callback-phone" class="callback__input" name="caller-phone" placeholder="Телефон"
-                     required>
-            </label>
-            <label for="callback-email" class="callback__label">
-              <input type="email" id="callback-email" class="callback__input" name="caller-email" placeholder="E-mail"
-                     required>
-            </label>
-          </div>
-          <button class="callback__submit-button blue-button" type="submit">позвоните мне</button>
-        </form>
+      <form class="callback__form" action="https://jsonplaceholder.typicode.com/posts" name="callback__form"
+            method="post">
+        <div class="callback-form-block">
+          <label for="callback-name" class="callback__label">
+            <input type="text" id="callback-name" class="callback__input" name="caller-name" placeholder="Ваше имя"
+                   required>
+          </label>
+          <label for="callback-phone" class="callback__label">
+            <input type="tel" id="callback-phone" class="callback__input" name="caller-phone" placeholder="Телефон"
+                   required>
+          </label>
+          <label for="callback-email" class="callback__label">
+            <input type="email" id="callback-email" class="callback__input" name="caller-email" placeholder="E-mail"
+                   required>
+          </label>
+        </div>
+        <button class="callback__submit-button blue-button" type="submit">позвоните мне</button>
+      </form>
 
-        <p class="callback__text-agreement">Я даю своё <span class="callback__link-style"><a
-          href="#">согласие</a></span> на обработку моих персональных данных.</p>
-      </div>
+      <p class="callback__text-agreement">Я даю своё <span class="callback__link-style"><a
+        href="#">согласие</a></span> на обработку моих персональных данных.</p>
     </div>
   </section>
 
   <section class="footer">
     <div class="container footer__container">
-      <div class="footer__wrapper wrapper">
-        <div class="footer__block-bar">
-          <div class="footer__block-logo">
-            <a href="#"><img class="logo" src="img/logo/Logo.png" alt="логотип"></a>
-            <p class="footer__copyrights footer__small-text">© 2022 XXXcompany. Все права защищены.</p>
-          </div>
-
-          <!--          <div class="hero__contacts contacts">-->
-          <!--            <p class="hero__phone phone">+7 (962) 556 - 1234</p>-->
-          <!--            <a href="#" class="phone-small"></a>-->
-          <!--            <p class="call-me-back"><a href="#">Перезвоните мне</a></p>-->
-          <!--          </div>-->
-
-          <p class="footer__made-by footer__small-text">Сделано в Ивановым Иваном</p>
-          <div class="footer__contacts contacts">
-            <p class="footer__phone phone">+7 (962) 556 - 1234</p>
-            <a href="#" class="phone-small"></a>
-            <p class="footer__call-me call-me-back"><a href="#">Перезвоните мне</a></p>
-          </div>
+      <div class="footer__block-bar">
+        <div class="footer__block-logo">
+          <a href="#"><img class="logo" src="img/logo/Logo.png" alt="логотип"></a>
+          <p class="footer__copyrights footer__small-text">© 2022 XXXcompany. Все права защищены.</p>
+        </div>
+        <p class="footer__made-by footer__small-text">Сделано в Ивановым Иваном</p>
+        <div class="footer__contacts contacts">
+          <p class="footer__phone phone">+7 (962) 556 - 1234</p>
+          <a href="#" class="phone-small"></a>
+          <p class="footer__call-me call-me-back"><a href="#">Перезвоните мне</a></p>
         </div>
       </div>
     </div>
     </div>
   </section>
+
 </body>
 </html>
