--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -19,9 +19,8 @@
       <div class="hero__block-bar">
         <a href="#"><img class="logo" src="img/logo/Logo.png" alt="логотип"></a>
         <div class="hero__contacts contacts">
-          <p class="hero__phone phone">+7 (962) 556 - 1234</p>
-          <a href="#" class="phone-small"></a>
-          <p class="call-me-back"><a href="#">Перезвоните мне</a></p>
+          <a class="phone" href="tel:+7(962)556-1234">+7 (962) 556 - 1234</a>
+          <button type="button" class="call-me-back">Перезвоните мне</button>
         </div>
       </div>
       <h1 class="hero__title">
@@ -116,9 +115,8 @@
         </div>
         <p class="footer__made-by footer__small-text">Сделано в Ивановым Иваном</p>
         <div class="footer__contacts contacts">
-          <p class="footer__phone phone">+7 (962) 556 - 1234</p>
-          <a href="#" class="phone-small"></a>
-          <p class="footer__call-me call-me-back"><a href="#">Перезвоните мне</a></p>
+          <a class="phone" href="tel:+7(962)556-1234">+7 (962) 556 - 1234</a>
+          <button type="button" class="call-me-back">Перезвоните мне</button>
         </div>
       </div>
     </div>
