--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         <button class="callback__submit-button blue-button" type="submit">позвоните мне</button>
       </form>
 
-      <p class="callback__text-agreement">Я даю своё <span class="callback__link-style"><a
-        href="#">согласие</a></span> на обработку моих персональных данных.</p>
+      <p class="callback__text-agreement">Я даю своё <a class="callback__link-style"
+        href="#">согласие</a> на обработку моих персональных данных.</p>
     </div>
   </section>
 
