--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="container footer__container">
       <div class="footer__block-bar">
         <div class="footer__block-logo">
-          <a href="#"><img class="logo" src="img/logo/Logo.png" alt="логотип"></a>
+          <a href="#"><img class="logo footer__logo" src="img/logo/Logo.png" alt="логотип"></a>
           <p class="footer__copyrights footer__small-text">© 2022 XXXcompany. Все права защищены.</p>
         </div>
         <p class="footer__made-by footer__small-text">Сделано в Ивановым Иваном</p>
