--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </form>
 
       <p class="callback__text-agreement">Я даю своё <a class="callback__link-style"
-        href="#">согласие</a> на обработку моих персональных данных.</p>
+                                                        href="#">согласие</a> на обработку моих персональных данных.</p>
     </div>
   </section>
 
@@ -113,13 +113,12 @@
           <a href="#"><img class="logo footer__logo" src="img/logo/Logo.png" alt="логотип"></a>
           <p class="footer__copyrights footer__small-text">© 2022 XXXcompany. Все права защищены.</p>
         </div>
-        <p class="footer__made-by footer__small-text">Сделано в Ивановым Иваном</p>
+        <p class="footer__made-by">Сделано в Ивановым Иваном</p>
         <div class="footer__contacts contacts">
           <a class="phone" href="tel:+7(962)556-1234">+7 (962) 556 - 1234</a>
           <button type="button" class="call-me-back">Перезвоните мне</button>
         </div>
       </div>
-    </div>
     </div>
   </section>
 </body>
