--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <a href="#"><img class="logo footer__logo" src="img/logo/Logo.png" alt="логотип"></a>
           <p class="footer__copyrights footer__small-text">© 2022 XXXcompany. Все права защищены.</p>
         </div>
-        <p class="footer__made-by">Сделано в Ивановым Иваном</p>
+        <p class="footer__made-by">Сделано Ивановым Иваном</p>
         <div class="footer__contacts contacts">
           <a class="phone" href="tel:+7(962)556-1234">+7 (962) 556 - 1234</a>
           <button type="button" class="call-me-back">Перезвоните мне</button>
