--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div class="hero__block-bar">
         <a href="#"><img class="logo" src="img/logo/Logo.png" alt="логотип"></a>
         <div class="hero__contacts contacts">
-          <a class="phone" href="tel:+7(962)556-1234">+7 (962) 556 - 1234</a>
-          <button type="button" class="call-me-back">Перезвоните мне</button>
+          <a class="phone hero__phone" href="tel:+7(962)556-1234">+7 (962) 556 - 1234</a>
+          <button type="button" class="call-me-back hero__call-me-back">Перезвоните мне</button>
         </div>
       </div>
       <h1 class="hero__title">
@@ -113,10 +113,10 @@
           <a href="#"><img class="logo footer__logo" src="img/logo/Logo.png" alt="логотип"></a>
           <p class="footer__copyrights footer__small-text">© 2022 XXXcompany. Все права защищены.</p>
         </div>
-        <p class="footer__made-by">Сделано Ивановым Иваном</p>
+        <p class="footer__made-by">Сделано в Ивановым Иваном</p>
         <div class="footer__contacts contacts">
-          <a class="phone" href="tel:+7(962)556-1234">+7 (962) 556 - 1234</a>
-          <button type="button" class="call-me-back">Перезвоните мне</button>
+          <a class="phone footer__phone" href="tel:+7(962)556-1234">+7 (962) 556 - 1234</a>
+          <button type="button" class="call-me-back footer__call-me-back">Перезвоните мне</button>
         </div>
       </div>
     </div>
